force-app/main/default/objects/Payment_Schedule__c/Payment_Schedule__c.object-meta.xml
<CustomObject>
    <description>Defines installment-based payment schedules for compensation calculations.</description>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Payment Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>