force-app/main/default/objects/Payment_Schedule__c/fields/Comp_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Comp_Calculation__c</fullName>
    <label>Comp Calculation</label>
    <type>Lookup</type>
    <referenceTo>Comp_Calculation__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>