force-app/main/default/objects/Payment_Schedule__c/fields/Installment_Pct__c.field-meta.xml
<CustomField>
    <fullName>Installment_Pct__c</fullName>
    <label>Installment Pct</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>