force-app/main/default/objects/Payment_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Scheduled</fullName><default>false</default><label>Scheduled</label></value>
            <value><fullName>Due</fullName><default>false</default><label>Due</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>Forfeited</fullName><default>false</default><label>Forfeited</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>